fixed contact page mobile alignment

--- a/src/page/contact/contact.css
+++ b/src/page/contact/contact.css
@@ -186,7 +186,6 @@
 
   .contactPage {
     margin-top: 50px;
-    height: 90vh;
     font-size: 0.75em;
   }
 
